# py-bencode

./: pyproject.toml  runit.py  setup.py
src/: bencode.c
